examples/test/testpolicy392.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy392
  namespace: namespace400
spec:
  podSelector:
    matchLabels:
      key25: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value32
          key30: value45
          key40: value49
      podSelector:
        matchLabels:
          key4: value32
          key11: value48
          key25: value13
